# OS_Project

./: .gitignore  CMakeLists.txt  createFile.cpp  deleteFile.cpp  functions.h  main.cpp  renameFile.cpp  writeTxt.cpp
Command Functions/: copyFile.cpp  functions.h  modifyTxt.cpp  printCurrentDirectory.cpp  readFile.cpp  removeTxt.cpp  testForTxt.cpp
Command Functions/Folders/: createFolder.cpp
Command Functions/Text Files/: modifyTxt.cpp  readFile.cpp  removeTxt.cpp  testForTxt.cpp  writeTxt.cpp
Command Functions/Traversal/: createFolder.cpp  deleteFolder.cpp  enterSubdirectory.cpp  exitSubdirectory.cpp  printCurrentDirectory.cpp
directory 1/blupt directory/: blupt.cpp
